[package]
name = "pem2jks"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
sha1 = "0.10.6"
digest = "0.10"
pem = "3.0.6"
x509-cert = "0.2.5"
der = { version = "0.7.10", features = ["derive", "alloc", "oid"] }
pkcs8 = { version = "0.10.2", features = ["alloc"] }
pkcs1 = { version = "0.7.5", features = ["alloc"] }
sec1 = { version = "0.7.3", features = ["alloc"] }
rsa = "0.9.10"
p256 = { version = "0.13.2", features = ["pkcs8"] }
rand = "0.8.5"

[dev-dependencies]
rcgen = { version = "0.14.7", features = ["x509-parser"] }
tempfile = "3.25.0"
rustls-pki-types = "1.14.0"
testcontainers = { version = "0.27.0", features = ["blocking"] }
